# lerobot_cpp

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: Broadcast.cpp  CalibrationOfs.cpp  FeedBack.cpp  GoHome.cpp  Ping.cpp  ProgramEprom.cpp  RegWritePos.cpp  SyncRead.cpp  SyncWritePos.cpp  WritePos.cpp  WriteSpe.cpp  examples.cmake
examples/robots/: ExampleUtils.h  SO101_Calibration.cpp  SO101_Home.cpp  SO101_Record.cpp  SO101_Wave.cpp
include/lerobot_cpp/: INST.h  SCS.h  SCSerial.h  STS3215.h  ServoErrors.h  ServoUtils.h  SyncWriteBuffer.h
include/lerobot_cpp/robots/: RobotUtils.h  SO101.h
src/: SCS.cpp  SCSerial.cpp  STS3215.cpp
src/robots/: RobotUtils.cpp  SO101.cpp
